force-app/main/default/objects/campaign__c/campaign__c.object-meta.xml
<CustomObject>
    <label>campaign</label>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>campaign</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>