force-app/main/default/objects/campaign__c/fields/additional_copy__c.field-meta.xml
<CustomField>
    <fullName>additional_copy__c</fullName>
    <label>Additional Copy</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>