force-app/main/default/objects/campaign__c/fields/additional_copy_title__c.field-meta.xml
<CustomField>
    <fullName>additional_copy_title__c</fullName>
    <label>Additional Copy Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>