force-app/main/default/objects/campaign__c/fields/bg_image__c.field-meta.xml
<CustomField>
    <fullName>bg_image__c</fullName>
    <label>bg image</label>
    <length>50</length>
    <type>Text</type>
</CustomField>