force-app/main/default/objects/campaign__c/fields/css__c.field-meta.xml
<CustomField>
    <fullName>css__c</fullName>
    <label>CSS</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>