force-app/main/default/objects/campaign__c/fields/destinations__c.field-meta.xml
<CustomField>
    <fullName>destinations__c</fullName>
    <label>Destinations</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>