force-app/main/default/objects/campaign__c/fields/featured_deals__c.field-meta.xml
<CustomField>
    <fullName>featured_deals__c</fullName>
    <label>Featured Deals</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>