force-app/main/default/objects/campaign__c/fields/featured_deals_title__c.field-meta.xml
<CustomField>
    <fullName>featured_deals_title__c</fullName>
    <label>Featured Deals Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>