force-app/main/default/objects/campaign__c/fields/herospace_image__c.field-meta.xml
<CustomField>
    <fullName>herospace_image__c</fullName>
    <label>herospace image</label>
    <length>50</length>
    <type>Text</type>
</CustomField>