force-app/main/default/objects/campaign__c/fields/intro_copy__c.field-meta.xml
<CustomField>
    <fullName>intro_copy__c</fullName>
    <label>Intro Copy</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>