force-app/main/default/objects/campaign__c/fields/intro_logo__c.field-meta.xml
<CustomField>
    <fullName>intro_logo__c</fullName>
    <label>Intro Logo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>