force-app/main/default/objects/campaign__c/fields/intro_title__c.field-meta.xml
<CustomField>
    <fullName>intro_title__c</fullName>
    <label>Intro Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>