force-app/main/default/objects/campaign__c/fields/media__c.field-meta.xml
<CustomField>
    <fullName>media__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media</label>
    <referenceTo>media__c</referenceTo>
    <relationshipLabel>campaign</relationshipLabel>
    <relationshipName>campaign</relationshipName>
    <type>Lookup</type>
</CustomField>