force-app/main/default/objects/campaign__c/fields/page_type__c.field-meta.xml
<CustomField>
    <fullName>page_type__c</fullName>
    <label>Page Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign</fullName>
                <default>true</default>
                <label>Campaign</label>
            </value>
            <value>
                <fullName>Destination</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>