force-app/main/default/objects/campaign__c/fields/Timer_Exp__c.field-meta.xml
<CustomField>
    <fullName>Timer_Exp__c</fullName>
    <label>Timer Exp</label>
    <type>DateTime</type>
</CustomField>