force-app/main/default/objects/campaign__c/fields/Wednesday_Banner__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Banner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wednesday Banner</label>
    <type>Checkbox</type>
</CustomField>