force-app/main/default/objects/campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>featured_deals__c</columns>
    <columns>site__c</columns>
    <columns>intro_title__c</columns>
    <columns>destinations__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>